--- a/src/app.module.css
+++ b/src/app.module.css
@@ -4,14 +4,20 @@ body {
   padding: 0;
 }
 
-.app {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.appWrapper {
+  width: 900px;
+  margin: 0 auto;
+  padding: 15px;
+  display: grid;
+  grid-template-rows: 60px 1fr 30px;
+  grid-template-columns: 2fr 10fr;
+  grid-template-areas: 'header header''nav main';
+  gap: 10px;
+
 }
 
-.title_1 {
 
-  color: red;
-
+.nav {
+  grid-area: nav;
+  background-color: lightgreen;
 }
