2023 09 03 React Kamasutra <li className={`${style.list__item} ${style.active}`}>     <div className={style['app__wrapper']}>

--- a/src/components/nav.module.css
+++ b/src/components/nav.module.css
@@ -10,6 +10,11 @@
   margin-top: 10px;
 }
 
+.list__item.active .list__link {
+  color: red;
+
+}
+
 .list__item:last-child {
 
   margin-top: 30px;
