2023 09 05 React Kamasutra  "react-router-dom": "^6.15.0"    <BrowserRouter>     <App />   </BrowserRouter>    <Routes>           <Route path="/" element={<Profile />} />           <Route path="/profile" element={<Profile />} />         </Routes>

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -21,3 +21,10 @@ body {
   grid-area: nav;
   background-color: lightgreen;
 }
+
+
+.main {
+  padding: 15px;
+  grid-area: main;
+  background-color: lightgrey;
+}
