--- a/src/components/Nav/nav.module.css
+++ b/src/components/Nav/nav.module.css
@@ -10,10 +10,7 @@
   margin-top: 10px;
 }
 
-.list__item.active .list__link {
-  color: red;
 
-}
 
 .list__item:last-child {
 
@@ -27,5 +24,19 @@
   text-decoration: none;
   margin-top: 10px;
   letter-spacing: 1px;
+  transition: color 0.3s ease-in;
+}
 
+.list__link:hover {
+  border-bottom: lavender 1px solid;
+  color: rgb(190, 190, 230);
+}
+
+.active-link {
+  color: rgb(228, 248, 46);
+  font-size: 16px;
+  font-weight: 600;
+  text-decoration: none;
+  margin-top: 10px;
+  letter-spacing: 1px;
 }
