2023 10 01 React Kamasutra cookie, login, auth/me

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -2,6 +2,10 @@
   padding: 10px;
   grid-area: header;
   background-color: lightgreen;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
 .logo__img {
